volume rtorrent session

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,6 @@ services:
       - "5050:5050"
       - "58282:58282"
     volumes:
-      - /rtorrent/downloads:/downloads
+      - /rtorrent:/rtorrent
     command: /root/startup.sh
     tty: true
